Fixed button z-indexes

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ body > div {position: absolute; top:0; width:100%; height: 100%}
 #illustrations {z-index: 50; height: 100%; width: 100%; position: absolute; left: 0;}
 #illustrations>img {position:absolute; z-index:1; height: inherit; height: inherit; left: 0;}
 #illustrations>img.white {z-index:2;}
-#logo {position: absolute; top: 53px; right: 108px; width: auto; height: auto; z-index: 100;}
+#logo {position: absolute; top: 53px; right: 108px; width: auto; height: auto; z-index: 102;}
 #logo img, #logo a {width: 33px; position: absolute;}
 #logo a {z-index:2;}
 #logo_backer {z-index:1;}
@@ -80,7 +80,7 @@ img#indigo {width: 196px; position: relative; top: 420px; z-index:0;}
 #video0,#video1,#video2,#placeholder {z-index: 1; height: auto; width: 100%; position: absolute;}
 #video1 {z-index: 10;}
 #video2 {z-index: 11;}
-#video3 {z-index: 12;}
+#video3 {z-index: 101;}
 #blackbar {background-color:black; top:0; left:0; position:absolute; z-index: 1000;}
 #blackbar.bottom,#blackbar.top {width: 100%;}
 
